add configuration Auth signUp