@@ -10,7 +10,7 @@ import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 import uz.dev.cardprocess.dto.DataDTO;
 import uz.dev.cardprocess.dto.LoginDTO;
-import uz.dev.cardprocess.dto.SignUp;
+import uz.dev.cardprocess.dto.SignUpDTO;
 import uz.dev.cardprocess.dto.TokenDTO;
 import uz.dev.cardprocess.entity.User;
 import uz.dev.cardprocess.entity.enums.RoleName;
@@ -20,6 +20,7 @@ import uz.dev.cardprocess.repository.UserRepository;
 import uz.dev.cardprocess.service.JwtService;
 import uz.dev.cardprocess.service.UserService;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 
@@ -32,31 +33,30 @@ public class UserServiceImpl implements UserService {
     private final PasswordEncoder passwordEncoder;
     private final RoleRepository roleRepository;
 
-    @Override
-    public DataDTO<TokenDTO> checkLoginDetails(LoginDTO loginDTO) {
-        String token;
-        try {
-            Authentication auth = authenticationManager.authenticate(new UsernamePasswordAuthenticationToken(loginDTO.getEmail(), loginDTO.getPassword()));
-            token = jwtService.genToken((UserDetails) auth.getPrincipal());
-        } catch (AuthenticationException e) {
-            throw new BadRequestException(e.getMessage());
+        @Override
+        public DataDTO<TokenDTO> checkLoginDetails(LoginDTO loginDTO) {
+            String token;
+            try {
+                Authentication auth = authenticationManager.authenticate(new UsernamePasswordAuthenticationToken(loginDTO.getEmail(), loginDTO.getPassword()));
+                token = jwtService.genToken((UserDetails) auth.getPrincipal());
+            } catch (AuthenticationException e) {
+                throw new BadRequestException(e.getMessage());
+            }
+            return new DataDTO<>(new TokenDTO(token));
         }
-        return new DataDTO<>(new TokenDTO(token));
-    }
 
     @Override
-    public DataDTO<String> signUp(SignUp signUp) {
-        User userSign = userRepository.findByEmail(signUp.getEmail()).orElseThrow(() -> new BadRequestException("this email already sign up "));
-        if (Objects.nonNull(userSign)) {
+    public DataDTO<String> signUp(SignUpDTO signUp) {
+        if ((userRepository.findByEmail(signUp.getEmail()).isEmpty())) {
             userRepository.save(
                     User.builder()
                             .email(signUp.getEmail())
                             .fullName(signUp.getFullName())
                             .password(passwordEncoder.encode(signUp.getPassword()))
-                            .roles(List.of(roleRepository.findByRoleName(RoleName.ROLE_CLIENT)))
+                            .roles(Objects.nonNull(roleRepository.findByRoleName(RoleName.ROLE_CLIENT)) ? List.of(roleRepository.findByRoleName(RoleName.ROLE_CLIENT)) : Collections.emptyList())
                             .build());
             return new DataDTO<>("success sign up");
         }
-        return new DataDTO<>("error sign up process");
+        return new DataDTO<>("error  already sign up  process");
     }
 }
